--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,10 +1,7 @@
 <h1>id: <%= @message.id %> のメッセージ編集ページ</h1>
 
-<%= form_with(model: @message, local: true) do |f| %>
-  <%= f.label :content, 'メッセージ' %>
-  <%= f.text_field :content %>
+　<h1>id: <%= @message.id %> のメッセージ編集ページ</h1>
 
-  <%= f.submit '投稿' %>
-<% end %>
+<%= render 'form', message: @message %>
 
 <%= link_to '一覧に戻る', messages_path %>
