--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,14 @@
-<%= form_with(model: message, local: true) do |f| %>
+　<%= form_with(model: message, local: true) do |f| %>
+  <% if message.errors.any? %>
+    <div id="error_explanation">
+      <ul>
+        <% message.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <%= f.label :content, 'メッセージ' %>
   <%= f.text_field :content %>
 
