--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-　<%= form_with(model: message, local: true) do |f| %>
+ <%= form_with(model: message, local: true) do |f| %>
   <% if message.errors.any? %>
     <div id="error_explanation">
       <ul>
@@ -8,6 +8,9 @@
       </ul>
     </div>
   <% end %>
+
+  <%= f.label :title, 'タイトル' %>
+  <%= f.text_field :title %>
 
   <%= f.label :content, 'メッセージ' %>
   <%= f.text_field :content %>
