--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,7 +2,8 @@
 
 <ul>
   <% @messages.each do |message| %>
-    <li><%= link_to message.id, message %> : <%= message.content %></li>
+    <li><%= link_to message.id, message %> : <%= message.title %> &gt; <%= message.content %></li>
   <% end %>
 </ul>
+
 <%= link_to '新規メッセージの投稿', new_message_path %>
