--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,19 +1,27 @@
- <%= form_with(model: message, local: true) do |f| %>
-  <% if message.errors.any? %>
-    <div id="error_explanation">
-      <ul>
-        <% message.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <div class="row">
+  <div class="col-6">
+    <%= form_with(model: message, local: true) do |f| %>
+      <% if message.errors.any? %>
+        <div id="error_explanation" class="alert alert-warning">
+          <ul class="mb-0">
+            <% message.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
 
-  <%= f.label :title, 'タイトル' %>
-  <%= f.text_field :title %>
+      <div class="form-group">
+        <%= f.label :title, 'タイトル' %>
+        <%= f.text_field :title, class: 'form-control' %>
+      </div>
 
-  <%= f.label :content, 'メッセージ' %>
-  <%= f.text_field :content %>
+      <div class="form-group">
+        <%= f.label :content, 'メッセージ' %>
+        <%= f.text_field :content, class: 'form-control' %>
+      </div>
 
-  <%= f.submit '投稿' %>
-<% end %>
+      <%= f.submit '投稿', class: 'btn btn-primary' %>
+    <% end %>
+  </div>
+</div>
